--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
 <body>
     <div class="main-login">
         <div class="left-login">
             <h1>Faça login<br>E entre para o nosso time</h1>
-            <img src="503-error-service.svg" alt="imagem de um astronauta">
+            <img src="img/503-error-service.svg" alt="imagem de um astronauta">
         </div>
         <div class="rigth-login">
             <div class="card-login">
